--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<title></title>
-	</head>
+		<meta charset="utf-8">
+		<title>SuperbVes
+		</title>
+		<link rel="icon" href="../img/icon.jpg" type="image/x-icon">
+		<link rel="stylesheet" type="text/css" href="../css/test.css" />
+		<link rel="stylesheet" type="text/css" href="./test.js" />
+		<script src="./test.js"></script>
+		</header>
 	<body>
-		
+		<script type="text/javascript" src="./test.js"></script>
+		<div style="position: relative;" class="box">
+			<img src="../img/main.jpg" width="100%" />
+	
+			<div id="btn" class="btn" onclick="button()">
+				<img src="../img/button.jpg" width="100%" height="100%">
+			</div>
+				<div id="btn2" class="btn2" onclick="button()">
+					<img src="../img/button.jpg" width="100%" height="100%">
+					</div>
+					<div class="text" onclick="window.open('https://egisvpn.github.io/Privacy_Policy')">Privacy Policy</div>
+					<div class="text2" onclick="window.open('https://egisvpn.github.io/Terms_of_Services')">Terms of Services</div>
+				</div>
 	</body>
+
 </html>
