--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<div id="btn2" class="btn2" onclick="button()">
 					<img src="img/button.jpg" width="100%" height="100%">
 					</div>
-					<div class="text" onclick="window.open('https://egisvpn.github.io/Privacy_Policy')">Privacy Policy</div>
-					<div class="text2" onclick="window.open('https://egisvpn.github.io/Terms_of_Services')">Terms of Services</div>
+					<div class="text" onclick="window.open('https://www.netlink.world/Privacy_Policy')">Privacy Policy</div>
+					<div class="text2" onclick="window.open('https://www.netlink.world/Terms_of_Services')">Terms of Services</div>
 				</div>
 	</body>
 
